[0, 14, 6]: 2017-04-14
  - binary, octal and hex integers are now preserved by default. This
    was a known deficiency. Working on this was prompted by the issue report (112)
    from devnoname120, as well as the additional experience with `.replace()`
    on `scalarstring` classes.
  - fix issues 114: cannot install on Buildozer (reported by mixmastamyk).
    Setting env. var ``RUAMEL_NO_PIP_INSTALL_CHECK`` will suppress ``pip``-check.

[0, 14, 5]: 2017-04-04
  - fix issue 109: None not dumping correctly at top level (reported by Andrea Censi)
  - fix issue 110: .replace on Preserved/DoubleQuoted/SingleQuoted ScalarString
    would give back "normal" string (reported by sandres23)

[0, 14, 4]: 2017-03-31
  - fix readme

[0, 14, 3]: 2017-03-31
  - fix for 0o52 not being a string in YAML 1.1 (reported on
    `StackOverflow Q&A 43138503><http://stackoverflow.com/a/43138503/1307905>`_ by
    `Frank D <http://stackoverflow.com/users/7796630/frank-d>`_

[0, 14, 2]: 2017-03-23
  - fix for old default pip on Ubuntu 14.04 (reported by Sébastien Maccagnoni-Munch)

0.14.1: 2017-03-22
  - fix Text not available on 3.5.0 and 3.5.1 (reported by Charles Bouchard-Légaré)

0.14.0: 2017-03-21
  - updates for mypy --strict
  - preparation for moving away from inheritance in Loader and Dumper, calls from e.g.
    the Representer to the Serializer.serialize() are now done via the attribute
    .serializer.serialize(). Usage of .serialize() outside of Serializer will be
    deprecated soon
  - some extra tests on main.py functions

0.13.14: 2017-02-12
  - fix for issue 97: clipped block scalar followed by empty lines and comment
    would result in two CommentTokens of which the first was dropped.
    (reported by Colm O'Connor)

0.13.13: 2017-01-28
  - fix for issue 96: prevent insertion of extra empty line if indented mapping entries
    are separated by an empty line (reported by Derrick Sawyer)

0.13.11: 2017-01-23